DigicielFull/force-app/main/default/objects/Product2/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access Control</fullName>
            </value>
            <value>
                <fullName>Ad funded wifi</fullName>
            </value>
            <value>
                <fullName>Advanced Networking</fullName>
            </value>
            <value>
                <fullName>App push</fullName>
            </value>
            <value>
                <fullName>Audio Conferencing</fullName>
            </value>
            <value>
                <fullName>Banner/Content Revenue</fullName>
            </value>
            <value>
                <fullName>BIA ( Basic Internet Access)</fullName>
            </value>
            <value>
                <fullName>Bill insert</fullName>
            </value>
            <value>
                <fullName>Broadband Internet</fullName>
            </value>
            <value>
                <fullName>Business Broadband</fullName>
            </value>
            <value>
                <fullName>Cloud Backup SB</fullName>
            </value>
            <value>
                <fullName>Cloud Computing</fullName>
            </value>
            <value>
                <fullName>Cloud Telephony</fullName>
            </value>
            <value>
                <fullName>Cloud V1 Backup</fullName>
            </value>
            <value>
                <fullName>Cloud V1 Hosted eMail</fullName>
            </value>
            <value>
                <fullName>Cloud V1 Hosted Exchange</fullName>
            </value>
            <value>
                <fullName>Cloud V1 Managed BES</fullName>
            </value>
            <value>
                <fullName>Cloud V1 Virtual Servers</fullName>
            </value>
            <value>
                <fullName>Computers</fullName>
            </value>
            <value>
                <fullName>Connectivity Services</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Data Center Colocation</fullName>
            </value>
            <value>
                <fullName>Datacentre</fullName>
            </value>
            <value>
                <fullName>Data Sim</fullName>
            </value>
            <value>
                <fullName>Data VPN</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet</fullName>
            </value>
            <value>
                <fullName>DIA Data VPN</fullName>
            </value>
            <value>
                <fullName>DIA DPLC</fullName>
            </value>
            <value>
                <fullName>DIA Internet</fullName>
            </value>
            <value>
                <fullName>DigiCloud-Backup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>