DigicielFull/force-app/main/default/objects/Product2/fields/Product_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Level_1__c</fullName>
    <label>Product Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Be-spoke Solutions</fullName>
            </value>
            <value>
                <fullName>Cloud &amp; Data Centre</fullName>
            </value>
            <value>
                <fullName>Connectivity Solutions</fullName>
            </value>
            <value>
                <fullName>Digital Services</fullName>
                <isActive>false</isActive>
                <label>Digital Services</label>
            </value>
            <value>
                <fullName>Fixed Voice</fullName>
            </value>
            <value>
                <fullName>Hosted Voice</fullName>
                <isActive>false</isActive>
                <label>Hosted Voice</label>
            </value>
            <value>
                <fullName>Internet</fullName>
                <isActive>false</isActive>
                <label>Internet</label>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>IPLC</fullName>
                <isActive>false</isActive>
                <label>IPLC</label>
            </value>
            <value>
                <fullName>IT Infrastructure</fullName>
            </value>
            <value>
                <fullName>Managed Wifi</fullName>
                <isActive>false</isActive>
                <label>Managed Wifi</label>
            </value>
            <value>
                <fullName>Mobile/Postpaid</fullName>
            </value>
            <value>
                <fullName>PBN</fullName>
                <isActive>false</isActive>
                <label>PBN</label>
            </value>
            <value>
                <fullName>PBX</fullName>
                <isActive>false</isActive>
                <label>PBX</label>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Sat Sleeve</fullName>
                <isActive>false</isActive>
                <label>Sat Sleeve</label>
            </value>
            <value>
                <fullName>Security Solutions</fullName>
            </value>
            <value>
                <fullName>Unified Comm. (UC)</fullName>
            </value>
            <value>
                <fullName>Vehicle Tracking</fullName>
                <isActive>false</isActive>
                <label>Vehicle Tracking</label>
            </value>
            <value>
                <fullName>Web Security</fullName>
                <isActive>false</isActive>
                <label>Web Security</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>