DigicielFull/force-app/main/default/objects/Product2/fields/Product_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Level_3__c</fullName>
    <label>Product Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C-Band VSAT</fullName>
            </value>
            <value>
                <fullName>Ku-Band VSAT</fullName>
            </value>
            <value>
                <fullName>Veeam/Zerto etc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>