DigicielFull/force-app/main/default/objects/Product2/fields/Product_Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Next_Review_Date__c</fullName>
    <label>Product Next Review Date</label>
    <type>Date</type>
</CustomField>