DigicielFull/force-app/main/default/objects/Product2/fields/Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type__c</fullName>
    <label>Product Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Cisco - Hardware</fullName>
            </value>
            <value>
                <fullName>Cisco - Software/Licenses</fullName>
            </value>
            <value>
                <fullName>Data Sim</fullName>
            </value>
            <value>
                <fullName>Digi-Office_Plus</fullName>
            </value>
            <value>
                <fullName>DigiVoice</fullName>
            </value>
            <value>
                <fullName>Dongle/Modem</fullName>
            </value>
            <value>
                <fullName>Dynamics 365</fullName>
            </value>
            <value>
                <fullName>Firewall &amp; VPN Routing</fullName>
            </value>
            <value>
                <fullName>Fortinet Security Product</fullName>
            </value>
            <value>
                <fullName>General Consultancy</fullName>
            </value>
            <value>
                <fullName>Handset</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>ICT Analogue</fullName>
            </value>
            <value>
                <fullName>ICT Cloud</fullName>
            </value>
            <value>
                <fullName>ICT Data</fullName>
            </value>
            <value>
                <fullName>ICT Direct</fullName>
            </value>
            <value>
                <fullName>ICT Exception</fullName>
            </value>
            <value>
                <fullName>ICT Fibre</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Office 365</fullName>
            </value>
            <value>
                <fullName>Office in a Box</fullName>
            </value>
            <value>
                <fullName>Options and accessories</fullName>
            </value>
            <value>
                <fullName>Peripherals</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>USSD</fullName>
            </value>
            <value>
                <fullName>Voice Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>