DigicielFull/force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>GSM</fullName>
            </value>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>Play TV</fullName>
            </value>
            <value>
                <fullName>Trend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>