DigicielFull/force-app/main/default/objects/Product2/fields/Recieve_Call_Roaming_Australia__c.field-meta.xml
<CustomField>
    <fullName>Recieve_Call_Roaming_Australia__c</fullName>
    <label>Recieve Call - Roaming Australia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>