DigicielFull/force-app/main/default/objects/Product2/fields/Recieve_SMS_Roaming__c.field-meta.xml
<CustomField>
    <fullName>Recieve_SMS_Roaming__c</fullName>
    <label>Recieve SMS - Roaming</label>
    <length>255</length>
    <type>Text</type>
</CustomField>