DigicielFull/force-app/main/default/objects/Product2/fields/Recurring_Bol_on_Minutes_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Bol_on_Minutes_Bundle__c</fullName>
    <label>Recurring Bol on Minutes Bundle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>