DigicielFull/force-app/main/default/objects/Product2/fields/Secondary_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_License_Type__c</fullName>
    <label>Secondary License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NON-SPECIFIC</fullName>
            </value>
            <value>
                <fullName>ADDON</fullName>
            </value>
            <value>
                <fullName>TRIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>