DigicielFull/force-app/main/default/objects/Product2/fields/Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit__c</fullName>
    <label>Security Deposit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>