DigicielFull/force-app/main/default/objects/Product2/fields/Send_SMS_Roaming__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_Roaming__c</fullName>
    <label>Send SMS - Roaming</label>
    <length>255</length>
    <type>Text</type>
</CustomField>