DigicielFull/force-app/main/default/objects/Product2/fields/SMS_to_Bemobile_Off_Peak__c.field-meta.xml
<CustomField>
    <fullName>SMS_to_Bemobile_Off_Peak__c</fullName>
    <label>SMS to Bemobile (Off-Peak)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>