DigicielFull/force-app/main/default/objects/Product2/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <label>Speed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>