DigicielFull/force-app/main/default/objects/Product2/fields/Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Stock_Level__c</fullName>
    <label>Stock Level</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>