DigicielFull/force-app/main/default/objects/Product2/fields/TECH_InstallationAddress__c.field-meta.xml
<CustomField>
    <fullName>TECH_InstallationAddress__c</fullName>
    <label>TECH_InstallationAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>