DigicielFull/force-app/main/default/objects/Product2/fields/TECH_OptyLineItemId__c.field-meta.xml
<CustomField>
    <fullName>TECH_OptyLineItemId__c</fullName>
    <label>TECH_OptyLineItemId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>