DigicielFull/force-app/main/default/objects/Product2/fields/TECH_ValuationOLI__c.field-meta.xml
<CustomField>
    <fullName>TECH_ValuationOLI__c</fullName>
    <label>TECH_ValuationOLI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>