DigicielFull/force-app/main/default/objects/Product2/fields/Traffic_Type__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Type__c</fullName>
    <label>Traffic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Analogue</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>ICT Direct</fullName>
            </value>
            <value>
                <fullName>ICT Exception</fullName>
            </value>
            <value>
                <fullName>ICT Fibre</fullName>
            </value>
            <value>
                <fullName>M2M</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Toll Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>