DigicielFull/force-app/main/default/objects/Product2/fields/Transaction_Percent__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Percent__c</fullName>
    <label>Transaction Percent</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>