DigicielFull/force-app/main/default/objects/Product2/fields/Unlimited_SMS_within_CUG__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_SMS_within_CUG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unlimited SMS within CUG?</label>
    <type>Checkbox</type>
</CustomField>