DigicielFull/force-app/main/default/objects/Product2/recordTypes/Digicel_PNG_TV.recordType-meta.xml
<RecordType>
    <fullName>Digicel_PNG_TV</fullName>
    <active>true</active>
    <description>For Television Business</description>
    <label>Digicel PNG TV</label>
</RecordType>