DigicielFull/force-app/main/default/objects/Product2/recordTypes/PNG_ICTGSMProduct.recordType-meta.xml
<RecordType>
    <fullName>PNG_ICTGSMProduct</fullName>
    <active>true</active>
    <label>Digicel PNG ICT &amp; GSM Product</label>
</RecordType>