DigicielFull/force-app/main/default/objects/Product2/recordTypes/Trends.recordType-meta.xml
<RecordType>
    <fullName>Trends</fullName>
    <active>true</active>
    <label>Trend</label>
</RecordType>