DigicielFull/force-app/main/default/objects/Product2/validationRules/Country_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Country__c)</errorConditionFormula>
    <errorMessage>Country is required</errorMessage>
</ValidationRule>