DigicielFull/force-app/main/default/objects/Product2/listViews/Anguilla_Consumer_Products.listView-meta.xml
<ListView>
    <fullName>Anguilla_Consumer_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Family2__c</columns>
    <columns>Charge_Type__c</columns>
    <columns>Product_Interest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Consumer</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>includes</operation>
        <value>Anguilla</value>
    </filters>
    <label>Anguilla Consumer Products</label>
</ListView>