DigicielFull/force-app/main/default/objects/Product2/listViews/Anguilla_Products.listView-meta.xml
<ListView>
    <fullName>Anguilla_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Country__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Anguilla</value>
    </filters>
    <label>Anguilla Products</label>
</ListView>