DigicielFull/force-app/main/default/objects/Product2/listViews/El_Salvador_Products.listView-meta.xml
<ListView>
    <fullName>El_Salvador_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>El Salvador</value>
    </filters>
    <label>El Salvador Products</label>
    <sharedTo>
        <group>SFDC_Admin_Team</group>
        <roleAndSubordinates>El_Salvador</roleAndSubordinates>
    </sharedTo>
</ListView>