DigicielFull/force-app/main/default/objects/Product2/listViews/French_Guiana.listView-meta.xml
<ListView>
    <fullName>French_Guiana</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>French Guiana</value>
    </filters>
    <label>French Guiana</label>
    <sharedTo>
        <group>Martinique_French_Guiana_Guadeloupe_User</group>
        <group>SFDC_Admin_Team</group>
        <roleAndSubordinates>French_Guiana</roleAndSubordinates>
    </sharedTo>
</ListView>