DigicielFull/force-app/main/default/objects/Product2/listViews/Martinique_Products.listView-meta.xml
<ListView>
    <fullName>Martinique_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Martinique</value>
    </filters>
    <label>Martinique Products</label>
    <sharedTo>
        <group>Martinique_French_Guiana_Guadeloupe_User</group>
        <group>SFDC_Admin_Team</group>
        <roleAndSubordinates>Martinique</roleAndSubordinates>
    </sharedTo>
</ListView>