DigicielFull/force-app/main/default/objects/Product2/listViews/Mobile_Advertising_Products.listView-meta.xml
<ListView>
    <fullName>Mobile_Advertising_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Family2__c</columns>
    <columns>Product_Interest__c</columns>
    <columns>Product_Type__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family2__c</field>
        <operation>equals</operation>
        <value>Mobile Advertisement</value>
    </filters>
    <label>Mobile Advertising Products</label>
</ListView>