DigicielFull/force-app/main/default/objects/Product2/listViews/PNG_DigicelProducts.listView-meta.xml
<ListView>
    <fullName>PNG_DigicelProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PNG_EstimatedImplementationDays__c</columns>
    <columns>PNG_WarrantyTerm__c</columns>
    <columns>PNG_ProductType__c</columns>
    <columns>PNG_ProductFamily__c</columns>
    <columns>PNG_ProductLevel1__c</columns>
    <columns>PNG_ProductLevel2__c</columns>
    <columns>PNG_ProductLevel3__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.PNG_ICTGSMProduct</value>
    </filters>
    <label>Digicel PNG Products</label>
</ListView>