DigicielFull/force-app/main/default/objects/Product2/listViews/PNG_Products_PayTV.listView-meta.xml
<ListView>
    <fullName>PNG_Products_PayTV</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Country__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Sub_Type__c</columns>
    <columns>Charge_Type__c</columns>
    <columns>Category_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>includes</operation>
        <value>Papua New Guinea</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Television</value>
    </filters>
    <label>PNG Products PayTV</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>PNG</roleAndSubordinates>
        <roleAndSubordinates>PNG_Head_of_Business</roleAndSubordinates>
    </sharedTo>
</ListView>